--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
                 </button>
             
                 <!-- Preview Image -->
-                <img src="./images/mail-preview.png" 
+                <img src="./images/mail-preview.jpeg"
                      alt="Mail preview"
                      class="w-full rounded-md">
             
